update: endpoint docs was added to another controllers
